--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -94,7 +94,7 @@ template(name='sbt')
                 
 template(name='skve')
     // a.ui.image.big.link.label.set_session_v(class=calculated_class)
-    .ui.circular.zoom.button.set_session_v(class=calculated_class)
+    .ui.circular.zoomer.button.set_session_v(class=calculated_class)
         if i
             // i.icon(class=icon)
             +i name=i cl='ui mini inline image'
@@ -544,7 +544,7 @@ template(name='vid_card')
         .sixteen.wide.center.aligned.column
             each thumbs
                 img.ui.small.superzoom.rounded.invert.inline.image.mobile.hidden(src=src)    
-                // img.ui.tiny.zoom.rounded.inline.image.mobile.only(src=src)    
+                // img.ui.tiny.zoomer.rounded.inline.image.mobile.only(src=src)    
             iframe.invert(src="https://www.pornhub.com/embed/#{video_id}" frameborder="0" width="100%" height='500' scrolling="no")
             // img.ui.image.rounded.pointer(src=default_thumb)
             //- a.ui.small.header(href=url target='_window') #{title}
