--- a/client/s.css
+++ b/client/s.css
@@ -374,7 +374,7 @@ a.goto_article {
     filter: drop-shadow(0px 0px 5px grey);    
 }
 
-.zoom:hover {
+..zoomer.:hover {
     transition: all .1s ease !important; 
     z-index: 1000 !important;
     transform: scale(1.05) !important;
